RESOLVED FIXED21289
REGRESSION (r37160): Inspector crashes on load
https://bugs.webkit.org/show_bug.cgi?id=21289
Summary REGRESSION (r37160): Inspector crashes on load
Cameron Zwarich (cpst)
Reported 2008-10-01 18:08:27 PDT
I expect that this is r37160, but I did specifically test it before landing.
Attachments
Stack trace (8.60 KB, text/plain)
2008-10-01 18:14 PDT, Cameron Zwarich (cpst)
no flags
Proposed patch (2.52 KB, patch)
2008-10-01 21:50 PDT, Cameron Zwarich (cpst)
mjs: review+
Cameron Zwarich (cpst)
Comment 1 2008-10-01 18:14:24 PDT
Created attachment 23999 [details] Stack trace
Cameron Zwarich (cpst)
Comment 2 2008-10-01 21:11:25 PDT
I verified that this fails with r37160, but it did not fail when I tested it before landing without COLLECT_ON_EVERY_ALLOCATION.
Cameron Zwarich (cpst)
Comment 3 2008-10-01 21:50:09 PDT
Created attachment 24006 [details] Proposed patch
Maciej Stachowiak
Comment 4 2008-10-01 21:56:45 PDT
Comment on attachment 24006 [details] Proposed patch r=me
Cameron Zwarich (cpst)
Comment 5 2008-10-01 22:08:18 PDT
Landed in r37182.
Note You need to log in before you can comment on or make changes to this bug.